Funcionalidade cadastro e dados faker

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AntonioByte/teste-ebac-ui#readme",
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "cypress": "^13.6.0"
   }
 }
